--- a/spr21/432_PCI_Ch03.ipynb
+++ b/spr21/432_PCI_Ch03.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOLB8I0LNNEjBV08TxjWOqr",
+      "authorship_tag": "ABX9TyOqG8QuvyJnEHM/ZbfBS4TW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -561,7 +561,7 @@
         "id": "JfkbVJJsf1Pn"
       },
       "source": [
-        "blognames, words, data = readfile(\"tweetdata.txt\")"
+        "blognames, words, data = readfile(\"blogdata.txt\")"
       ],
       "execution_count": null,
       "outputs": []
