--- a/fall21/432_F21_Mod02_Python.ipynb
+++ b/fall21/432_F21_Mod02_Python.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtnAWYhw0YG7zaBHZgVwGc",
+      "authorship_tag": "ABX9TyN3h+lGBaM7ocRuB3UdZ6h3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "source": [
         "# CS 432/532 - Module 02 - Python\n",
         "\n",
-        "This notebook goes along with the [Module-02 Python slides](https://docs.google.com/presentation/d/1i-I17jOQx0DOTBCaB9NEDyTo0IApzbF6IHyFBfcsswI/edit?usp=sharing) from [CS 432/532 Spring 2021](https://www.cs.odu.edu/~mweigle/CS432-S21/)\n",
+        "This notebook goes along with the [Module-02 Python slides](https://docs.google.com/presentation/d/1i-I17jOQx0DOTBCaB9NEDyTo0IApzbF6IHyFBfcsswI/edit?usp=sharing) from CS 432/532.\n",
         "\n",
         "Google Colab tutorials and references:\n",
         "* [Overview of Colaboratory Features](https://colab.research.google.com/notebooks/basic_features_overview.ipynb)\n",
