--- a/fall21/432_F21_Mod02_lab.ipynb
+++ b/fall21/432_F21_Mod02_lab.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOxa4om2vxFUE8LbHLc+5QK",
+      "authorship_tag": "ABX9TyPUBrr06KhnqBc1Zrt4nOlC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,9 +76,9 @@
       "source": [
         "2) Compute the number of lines and characters in a file. \n",
         "\n",
-        "The text file is available at https://github.com/cs432-websci-master/public/blob/main/gettysburg.txt\n",
+        "The text file is available at https://raw.githubusercontent.com/odu-cs432-websci/public/main/gettysburg.txt\n",
         "\n",
-        "Download the \"Raw\" version and upload it to your Google Colab temporary file space."
+        "Download the file and upload it to your Google Colab temporary file space."
       ]
     },
     {
